# MultiTetris

./: .gitmodules  CMakeLists.txt  README.md  conanfile.txt
CMake/: RPLMInstallMacros.cmake
doc/docbook/: _abstract_block_8h_source.xml  _abstract_creator_8h_source.xml  _abstract_model_8h_source.xml  _abstract_widget_8h_source.xml  _blocks_factory_8h_source.xml  _controller_2_include_2_controller_2_export_8h_source.xml  _controller_2_include_2_controller_2_precompile_8h_source.xml  _description_model_8h_source.xml  _i_application_8h_source.xml  _iblock_8h_source.xml  _jblock_8h_source.xml  _key_press_filter_8h_source.xml  _lblock_8h_source.xml  _model_2_include_2_model_2_export_8h_source.xml  _model_2_include_2_model_2_forwards_8h_source.xml  _model_2_include_2_model_2_map_8h_source.xml  _model_2_include_2_model_2_precompile_8h_source.xml  _model_game_8h_source.xml  _move_controller_8h_source.xml  _object_factory_8h_source.xml  _oblock_8h_source.xml  _preview_block_8h_source.xml  _q_adapter_widget_8h_source.xml  _qt_2_widget_8h_source.xml  _qt_application_8h_source.xml  _s_f_m_l_2_widget_8h_source.xml  _s_f_m_l_application_8h_source.xml  _sblock_8h_source.xml  _tblock_8h_source.xml  _text_8h_source.xml  _time_controller_8h_source.xml  _types_8h_source.xml  _view_2_include_2_view_2_export_8h_source.xml  _view_2_include_2_view_2_forwards_8h_source.xml  _view_2_include_2_view_2_precompile_8h_source.xml  _view_2_include_2_view_2_qt_2_map_8h_source.xml  _view_2_include_2_view_2_s_f_m_l_2_map_8h_source.xml  _widget_preview_block_8h_source.xml  _zblock_8h_source.xml  annotated.xml  (+36 more)
doc/html/: _abstract_block_8h_source.html  _abstract_creator_8h_source.html  _abstract_model_8h_source.html  _abstract_widget_8h_source.html  _blocks_factory_8h_source.html  _controller_2_include_2_controller_2_export_8h_source.html  _controller_2_include_2_controller_2_precompile_8h_source.html  _description_model_8h_source.html  _i_application_8h_source.html  _iblock_8h_source.html  _jblock_8h_source.html  _key_press_filter_8h_source.html  _lblock_8h_source.html  _model_2_include_2_model_2_export_8h_source.html  _model_2_include_2_model_2_forwards_8h_source.html  _model_2_include_2_model_2_map_8h_source.html  _model_2_include_2_model_2_precompile_8h_source.html  _model_game_8h_source.html  _move_controller_8h_source.html  _object_factory_8h_source.html  _oblock_8h_source.html  _preview_block_8h_source.html  _q_adapter_widget_8h_source.html  _qt_2_widget_8h_source.html  _qt_application_8h_source.html  _s_f_m_l_2_widget_8h_source.html  _s_f_m_l_application_8h_source.html  _sblock_8h_source.html  _tblock_8h_source.html  _text_8h_source.html  _time_controller_8h_source.html  _types_8h_source.html  _widget_preview_block_8h_source.html  (+130 more)
src/: main.cpp
src/Common/: CMakeLists.txt
src/Common/Include/: AbstractObservable.h  AbstractObserver.h  Precompile.h
src/Common/Include/Commands/: AbstractCommand.h  MoveCommand.h  UpdateMapCommand.h
src/Common/Include/Data/: ThreadsafeQueue.h  Types.h
src/Common/Source/: AbstractObservable.cpp  AbstractObserver.cpp
src/Common/Source/Commands/: AbstractCommand.cpp  MoveCommand.cpp  UpdateMapCommand.cpp
src/Controller/: CMakeLists.txt
src/Controller/Include/Controller/: Export.h  MoveController.h  Precompile.h  TimeController.h
src/Controller/Source/: MoveController.cpp  Precompile.cpp  TimeController.cpp
src/Controller/cmake/: Controller-config.cmake.in  utils.cmake
src/Model/: CMakeLists.txt
src/Model/Include/: AbstractModel.h  AbstractWidget.h  DescriptionModel.h  Forwards.h  IWidget.h  Map.h  Model.h  ModelGame.h  Precompile.h  Types.h
src/Model/Include/Blocks/: AbstractBlock.h  Iblock.h  Jblock.h  Lblock.h  Oblock.h  Sblock.h  Tblock.h  Zblock.h
src/Model/Include/Factory/: AbstractCreator.h  BlocksFactory.h  ObjectFactory.h  ShapeFactory.h
src/Model/Include/Map/: Map.h
src/Model/Include/Model/: AbstractModel.h  AbstractWidget.h  DescriptionModel.h  Export.h  Forwards.h  Map.h  MementoModel.h  ModelGame.h  Precompile.h  Types.h
src/Model/Include/Model/Blocks/: AbstractBlock.h  Iblock.h  Jblock.h  Lblock.h  Oblock.h  Sblock.h  Tblock.h  Zblock.h
src/Model/Include/Model/Factory/: AbstractCreator.h  BlocksFactory.h  ObjectFactory.h
src/Model/Source/: Map.cpp  ModelGame.cpp  Precompile.cpp  Types.cpp
src/Model/Source/Blocks/: AbstractBlock.cpp
src/Model/Source/Map/: Map.cpp
src/Model/Tests/: CMakeLists.txt
src/Model/Tests/Source/: BlockTest.cpp
src/Model/cmake/: Model-config.cmake.in  utils.cmake
src/View/: CMakeLists.txt
src/View/Include/: AbstractWidget.h  Forwards.h  Precompile.h  SFMLApplication.h  SFMLMap.h  SFMLPreviewBlock.h  SFMLText.h  SFMLView.h  SFMLWidget.h
src/View/Include/Qt/: Adapter.h  KeyPressFilter.h  Map.h  PreviewBlock.h  QAdapterWidget.h  QtApplication.h  Widget.h
src/View/Include/SFML/: Map.h  SFMLApplication.h  SFMLMap.h  SFMLPreviewBlock.h  SFMLWidget.h  Text.h  Widget.h  WidgetPreviewBlock.h
src/View/Include/View/: AbstractApplication.h  Export.h  Forwards.h  IApplication.h  Precompile.h
src/View/Include/View/Qt/: KeyPressFilter.h  Map.h  PreviewBlock.h  QAdapterWidget.h  QtApplication.h  Widget.h  WidgetPreviewBlock.h
src/View/Include/View/SFML/: Map.h  SFMLApplication.h  Text.h  Widget.h  WidgetPreviewBlock.h
src/View/Source/: Precompile.cpp  SFMLApplication.cpp  SFMLMap.cpp  SFMLPreviewBlock.cpp  SFMLText.cpp  SFMLView.cpp  SFMLWidget.cpp
src/View/Source/Qt/: Adapter.cpp  Map.cpp  PreviewBlock.cpp  QAdapterWidget.cpp  QtApplicaion.cpp  Widget.cpp  WidgetPreviewBlock.cpp
src/View/Source/SFML/: Map.cpp  SFMLApplication.cpp  SFMLMap.cpp  SFMLPreviewBlock.cpp  SFMLText.cpp  SFMLWidget.cpp  Text.cpp  Widget.cpp  Widget.cpp.rej  WidgetPreviewBlock.cpp
src/View/cmake/: View-config.cmake.in  utils.cmake
src/app/: CMakeLists.txt  main.cpp
src/app/Include/: SFMLApplication.h
src/app/Source/: SFMLApplication.cpp
src/controllers/: CMakeLists.txt
src/controllers/Include/: MoveController.h  Precompile.h  TimeController.h
src/controllers/Source/: MoveController.cpp  TimeController.cpp
(+209 files in other folders)
